--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
+    "axios": "^1.1.3",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "googleapis": "^105.0.0",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
